--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <style>
+      
+    </style>
     <title>React QRCode App</title>
   </head>
   <body>
